# FISJ

./: README.md  pyproject.toml
FISJ/: Adapter.jp  __init__.py  adapter.py  inverse_causal_engine.py  main.py  network_analyzer_core_v2.py  nnnu.py  nnnu_inverse.py  score_fusion.py
tests/: CausemeLocalBench.py  benchmark.py
